# smart-vk-publisher

./: .gitignore  pyproject.toml
plans/: vk_publisher_implementation.md
src/events/: __init__.py  interface.py
src/events/event_bus/: event_bus.py
src/logger/: logger.py
src/model/domain/: __init__.py  process_text.py  ready_text.py
src/model/kafka/: __init__.py  message.py
src/services/content_factory/: __init__.py  factory.py  interface.py
src/services/content_factory/model/: __init__.py  content_context.py  models.py
src/services/content_factory/pipline_steps/: __init__.py  interface.py  pipline.py
src/services/content_factory/pipline_steps/config/: __init__.py  prompts.py
src/services/content_factory/pipline_steps/llm_worker/: __init__.py  interface.py
src/services/content_factory/workers/: __init__.py
src/services/content_factory/workers/image_parser/: interface.py
src/services/content_factory/workers/text_parser/: __init__.py  interface.py  text_parser.py
src/services/content_workers/image_generator/: __init__.py  generator.py  interface.py
src/services/content_workers/llm_worker/: __init__.py  interface.py
src/services/content_workers/text_parser/: interface.py  text_parser.py
src/services/image_generator/: interface.py
src/services/publisher/: __init__.py  interface.py
src/services/publisher/vk_publisher/: __init__.py  models.py  vk_publisher.py
src/services/reader/: __init__.py  interface.py
src/services/reader/kafka_reader/: __init__.py  reader.py
src/utils/: __init__.py  base64.py  text_cleaner.py  text_replace.py
(+21 files in other folders)
